added early stopping code

--- a/neon Iris.ipynb
+++ b/neon Iris.ipynb
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am using this backend: <neon.backends.nervanacpu.NervanaCPU object at 0x7f4965a6b410>\n"
+      "I am using this backend: <neon.backends.nervanacpu.NervanaCPU object at 0x7f0b6ff35410>\n"
      ]
     }
    ],
@@ -303,7 +303,9 @@
    "source": [
     "## Callbacks\n",
     "\n",
-    "[Callbacks](https://neon.nervanasys.com/index.html/callbacks.html) allow us to run custom code at certain points during the training. For example, in the code below we want to find out how well the model is performing against the testing data after every 7 epochs of training. If the cross entropy error goes up, then we stop the training early. Otherwise, we might be overfitting the model to the training set."
+    "[Callbacks](https://neon.nervanasys.com/index.html/callbacks.html) allow us to run custom code at certain points during the training. For example, in the code below we want to find out how well the model is performing against the testing data after every 2 callbacks of training. If the cross entropy error goes up, then we stop the training early. Otherwise, we might be overfitting the model to the training set.\n",
+    "\n",
+    "I've added a *patience* parameter to the early stopping. If the model's performance has not improved after a certain number of callbacks, then we will stop training early."
    ]
   },
   {
@@ -321,17 +323,32 @@
     "# and returns as output a tuple (State', Bool),\n",
     "# which represents the new state and whether to stop\n",
     "\n",
-    "# Stop if validation error ever increases from epoch to epoch\n",
     "def stop_func(s, v):\n",
+    "    \n",
+    "    patience = 4  # If model performance has not improved in this many callbacks, then early stop.\n",
+    "    \n",
     "    if s is None:\n",
-    "        return (v, False)\n",
-    "      \n",
-    "    return (min(s, v), v > s)   # If v > s, then we need to stop training\n",
+    "        return ([v], False)\n",
+    "    \n",
+    "    if (all(v < i for i in s)):\n",
+    "        history = [v]\n",
+    "        print('Model improved performance: {}'.format(v))\n",
+    "    else:\n",
+    "        history = s + [v]\n",
+    "        print('Model has not improved in {} callbacks.'.format(len(history)-1))\n",
+    "            \n",
+    "    if len(history) > patience:\n",
+    "        stop = True\n",
+    "        print('Stopping training early.')\n",
+    "    else:\n",
+    "        stop = False\n",
+    "    \n",
+    "    return (history, stop)   \n",
     "\n",
-    "# The model trains on the training set, but every 7 epochs we calculate\n",
+    "# The model trains on the training set, but every 2 epochs we calculate\n",
     "# its performance against the testing set. If the performance increases, then\n",
     "# we want to stop early because we are overfitting our model.\n",
-    "callbacks = Callbacks(mlp, eval_set=testing_data, eval_freq=7)  # Run the callback every 7 epochs\n",
+    "callbacks = Callbacks(mlp, eval_set=testing_data, eval_freq=2)  # Run the callback every 2 epochs\n",
     "callbacks.add_callback(EarlyStopCallback(stop_func)) # Add our early stopping function call"
    ]
   },
@@ -353,27 +370,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0   [Train |████████████████████|   10/10   batches, 0.75 cost, 0.04s]\n",
-      "Epoch 1   [Train |████████████████████|   10/10   batches, 0.51 cost, 0.04s]\n",
-      "Epoch 2   [Train |████████████████████|   10/10   batches, 0.37 cost, 0.03s]\n",
-      "Epoch 3   [Train |████████████████████|   10/10   batches, 0.31 cost, 0.03s]\n",
-      "Epoch 4   [Train |████████████████████|   10/10   batches, 0.21 cost, 0.03s]\n",
-      "Epoch 5   [Train |████████████████████|   10/10   batches, 0.25 cost, 0.03s]\n",
-      "Epoch 6   [Train |████████████████████|   10/10   batches, 0.29 cost, 0.03s] [CrossEntropyMulti Loss 0.28, 0.00s]\n",
-      "Epoch 7   [Train |████████████████████|   10/10   batches, 0.29 cost, 0.03s]\n",
-      "Epoch 8   [Train |████████████████████|   10/10   batches, 0.41 cost, 0.04s]\n",
-      "Epoch 9   [Train |████████████████████|   10/10   batches, 0.16 cost, 0.03s]\n",
-      "Epoch 10  [Train |████████████████████|   10/10   batches, 0.20 cost, 0.03s]\n",
-      "Epoch 11  [Train |████████████████████|   10/10   batches, 0.14 cost, 0.03s]\n",
-      "Epoch 12  [Train |████████████████████|   10/10   batches, 0.17 cost, 0.04s]\n",
-      "Epoch 13  [Train |████████████████████|   10/10   batches, 0.26 cost, 0.04s] [CrossEntropyMulti Loss 0.20, 0.00s]\n",
-      "Epoch 14  [Train |████████████████████|   10/10   batches, 0.11 cost, 0.03s]\n",
-      "Epoch 15  [Train |████████████████████|   10/10   batches, 0.14 cost, 0.04s]\n",
-      "Epoch 16  [Train |████████████████████|   10/10   batches, 0.18 cost, 0.04s]\n",
-      "Epoch 17  [Train |████████████████████|   10/10   batches, 0.21 cost, 0.03s]\n",
-      "Epoch 18  [Train |████████████████████|   10/10   batches, 0.16 cost, 0.03s]\n",
-      "Epoch 19  [Train |████████████████████|   10/10   batches, 0.11 cost, 0.04s]\n",
-      "Epoch 20  [Train |████████████████████|   10/10   batches, 0.15 cost, 0.04s] [CrossEntropyMulti Loss 0.24, 0.00s]\n"
+      "Epoch 0   [Train |████████████████████|   10/10   batches, 0.63 cost, 0.04s]\n",
+      "Epoch 1   [Train |████████████████████|   10/10   batches, 0.33 cost, 0.03s] [CrossEntropyMulti Loss 0.31, 0.01s]\n",
+      "Epoch 2   [Train |████████████████████|   10/10   batches, 0.30 cost, 0.03s]\n",
+      "Epoch 3   [Train |████████████████████|   10/10   batches, 0.23 cost, 0.04s] [CrossEntropyMulti Loss 0.13, 0.00s]\n",
+      "Model improved performance: 0.134086459875\n",
+      "Epoch 4   [Train |████████████████████|   10/10   batches, 0.24 cost, 0.03s]\n",
+      "Epoch 5   [Train |████████████████████|   10/10   batches, 0.18 cost, 0.03s] [CrossEntropyMulti Loss 0.15, 0.00s]\n",
+      "Model has not improved in 1 callbacks.\n",
+      "Epoch 6   [Train |████████████████████|   10/10   batches, 0.14 cost, 0.03s]\n",
+      "Epoch 7   [Train |████████████████████|   10/10   batches, 0.23 cost, 0.03s] [CrossEntropyMulti Loss 0.11, 0.00s]\n",
+      "Model improved performance: 0.108739070594\n",
+      "Epoch 8   [Train |████████████████████|   10/10   batches, 0.34 cost, 0.03s]\n",
+      "Epoch 9   [Train |████████████████████|   10/10   batches, 0.22 cost, 0.03s] [CrossEntropyMulti Loss 0.17, 0.00s]\n",
+      "Model has not improved in 1 callbacks.\n",
+      "Epoch 10  [Train |████████████████████|   10/10   batches, 0.24 cost, 0.03s]\n",
+      "Epoch 11  [Train |████████████████████|   10/10   batches, 0.20 cost, 0.03s] [CrossEntropyMulti Loss 0.15, 0.00s]\n",
+      "Model has not improved in 2 callbacks.\n",
+      "Epoch 12  [Train |████████████████████|   10/10   batches, 0.13 cost, 0.03s]\n",
+      "Epoch 13  [Train |████████████████████|   10/10   batches, 0.23 cost, 0.04s] [CrossEntropyMulti Loss 0.15, 0.00s]\n",
+      "Model has not improved in 3 callbacks.\n",
+      "Epoch 14  [Train |████████████████████|   10/10   batches, 0.08 cost, 0.03s]\n",
+      "Epoch 15  [Train |████████████████████|   10/10   batches, 0.08 cost, 0.03s] [CrossEntropyMulti Loss 0.14, 0.00s]\n",
+      "Model has not improved in 4 callbacks.\n",
+      "Stopping training early.\n"
      ]
     }
    ],
@@ -399,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model misclassified 4.00% of the test data.\n"
+      "The model misclassified 6.00% of the test data.\n"
      ]
     }
    ],
@@ -425,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mlp.save_params('iris_model.prm')"
