added early stopping code

--- a/neon Iris.ipynb
+++ b/neon Iris.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "layers = [ \n",
     "          Affine(nout=5, init=init, bias=init, activation=Rectlin()), # Affine layer with 5 neurons (ReLU activation)\n",
-    "          Affine(nout=8, init=init, bias=init, activation=Tanh()), # Affine layer with 4 neurons (Tanh activation)\n",
+    "          Affine(nout=8, init=init, bias=init, activation=Tanh()), # Affine layer with 7 neurons (Tanh activation)\n",
     "          Dropout(0.5),  # Dropout layer\n",
     "          Affine(nout=nClasses, init=init, bias=init, activation=Softmax()) # Affine layer with softmax\n",
     "         ] "
@@ -330,18 +330,18 @@
     "    if s is None:\n",
     "        return ([v], False)\n",
     "    \n",
-    "    if (all(v < i for i in s)):\n",
-    "        history = [v]\n",
+    "    if (all(v < i for i in s)):  # Check to see if this value is smaller than any in the history\n",
+    "        history = [v]  # New value is smaller so let's reset the history\n",
     "        print('Model improved performance: {}'.format(v))\n",
     "    else:\n",
-    "        history = s + [v]\n",
+    "        history = s + [v]   # New value is not smaller, so let's add to current history\n",
     "        print('Model has not improved in {} callbacks.'.format(len(history)-1))\n",
     "            \n",
-    "    if len(history) > patience:\n",
+    "    if len(history) > patience:  # If our history is greater than the patience, then early terminate.\n",
     "        stop = True\n",
     "        print('Stopping training early.')\n",
     "    else:\n",
-    "        stop = False\n",
+    "        stop = False   # Otherwise, keep training.\n",
     "    \n",
     "    return (history, stop)   \n",
     "\n",
