extract patches update

--- a/luna16/AugmentCandidates.ipynb
+++ b/luna16/AugmentCandidates.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -49,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfAnnotations = pd.read_csv(DATA_DIR+annotations_path).reset_index()\n",
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -85,12 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(754975, 6)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfCandidates.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "seriesuid = dfClass1['seriesuid'].unique()  # Get the unique series names (subjects)\n",
@@ -160,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +380,7 @@
        "3901        -24.013824        192.102405       -391.081276  "
       ]
      },
-     "execution_count": 269,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -391,23 +402,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "dfOut = dfCandidates.join(dfClass1[['candidate', 'diameter_mm', 'coordX_annotated', 'coordY_annotated', 'coordZ_annotated']], on='candidate', rsuffix='_r')\n",
-    "del dfOut['candidate_r']"
+    "del dfOut['candidate_r']\n",
+    "del dfOut['candidate']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dfOut.to_csv('candidates_with_annotations.csv')"
+    "dfOut.to_csv('candidates_with_annotations.csv', index=False)"
    ]
   },
   {
