Nifti and SimpleITK for DICOM MRI

--- a/dicom/Show_Nifti_MRI.ipynb
+++ b/dicom/Show_Nifti_MRI.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use NiBabel to read MRI of brain in Nifti format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -171,22 +180,22 @@
     }
    ],
    "source": [
-    "img.header.keys()"
+    "img.header.keys() # These are the metadata from the DICOM file"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
@@ -254,8 +263,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Use SimpleITK to read MRI brain in Nifti format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import SimpleITK as sitk"
@@ -371,7 +425,7 @@
     }
    ],
    "source": [
-    "imgS.GetMetaDataKeys()"
+    "imgS.GetMetaDataKeys()  # These are the meta data from the DICOM file"
    ]
   },
   {
